--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.3.0",
     "craco-less": "^1.16.0",
+    "less-loader": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^4.6.3",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
