--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.3.0",
-    "craco-less": "^1.16.0",
+    "craco-less": "1.14.0",
+    "immutable": "^4.0.0-rc.12",
     "less-loader": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-intl": "^4.6.3",
-    "react-redux": "5.0.7",
+    "react-redux": "^7.2.0",
+    "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.4.1",
-    "redux": "4.0.0",
+    "redux": "^4.0.5",
     "redux-immutable": "4.0.0",
     "redux-thunk": "2.3.0"
   },
