--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "^3.4.1",
+    "react-slick": "^0.26.1",
     "redux": "^4.0.5",
     "redux-immutable": "4.0.0",
     "redux-thunk": "2.3.0",
